Приложении при открытии запрашивает разрешение на чтение контактов. Контакты выводятся в алфавитном порядке, у каждого доступно 2 кнопки - позвонить и смс. При нажатии - запрашивается соотвествующее разрешение. После выдачи разрешения необходимо нажать еще раз для совершения действия. при нажатии на смс переходим в другое окно где надо ввести текст смс и нажать кнопку отправить, после чего показывается уведомление об отправке сообщения и мы возвращаемся к экрану с контактами. Для кнопок сделаны анимации.

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -9,6 +9,7 @@
     <dimen name="defPadding">8dp</dimen>
     <dimen name="bigPadding">32dp</dimen>
     <dimen name="smallTextSize">14sp</dimen>
-    <dimen name="imageHeight">150dp</dimen>
+    <dimen name="imageHeight">36dp</dimen>
     <dimen name="layout_margin">8dp</dimen>
+    <dimen name="icon_size">24dp</dimen>
 </resources>
