--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -3,23 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".MainFragment">
 
-    <Button
-        android:id="@+id/cameraBTN"
-        style="@style/ButtonStyle"
-        android:layout_width="@dimen/minWidthET"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/defMargin"
-        android:text="@string/cameraBTN_text" />
-
-    <Button
-        android:id="@+id/contactsBTN"
-        style="@style/ButtonStyle"
-        android:layout_width="@dimen/minWidthET"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="@dimen/defMargin"
-        android:text="@string/contactsBTN_text" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/contactsRV"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        tools:listitem="@layout/item_contact"/>
 
 </LinearLayout>
