--- a/app/src/main/res/layout/item_contact.xml
+++ b/app/src/main/res/layout/item_contact.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="@dimen/defPadding">
 
     <TextView
         android:id="@+id/contactName"
@@ -17,7 +18,40 @@
         android:id="@+id/contactPhoneNumber"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:padding="@dimen/defPadding"
         android:text="@string/contactPhoneNumber_text"
         android:textColor="@color/grey"
         android:textSize="@dimen/smallTextSize" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/callBTN"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="@color/button_selector"
+            android:icon="@drawable/ic_phone"
+            android:text="@string/callBTN_text"
+            app:iconGravity="textStart"
+            app:iconPadding="@dimen/defPadding"
+            app:iconSize="@dimen/icon_size" />
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/smsBTN"
+            style="@style/ButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/defMargin"
+            android:backgroundTint="@color/button_selector"
+            android:icon="@drawable/ic_sms"
+            android:text="@string/smsBTN_text"
+            app:iconGravity="textStart"
+            app:iconPadding="@dimen/defPadding"
+            app:iconSize="@dimen/icon_size" />
+
+    </LinearLayout>
 </LinearLayout>
