--- a/app/src/main/res/menu/exit.xml
+++ b/app/src/main/res/menu/exit.xml
@@ -1,9 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
+
+    <!-- Элемент для выхода -->
     <item
         android:id="@+id/action_exit"
-        android:title="@string/exit"
         android:orderInCategory="100"
+        android:title="@string/exit"
         app:showAsAction="never" />
+
+    <!-- Элемент для поиска -->
+    <item
+        android:id="@+id/action_search"
+        android:icon="@android:drawable/ic_menu_search"
+        android:title="@string/search"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView" />
 </menu>
